testsuite/poke.pkl/asm-stmt-diag-3.pk
/* { dg-do compile } */

asm (
  10 /* { dg-error "expected string" } */
);
